--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
     <!--  Custom CSS  -->
     <link href="https://fonts.googleapis.com/css?family=Yellowtail" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Dosis" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="styles/styles.css">
     
   </head>
@@ -31,7 +32,7 @@
     <header class="main-header container-fluid  fixed-top">
       
       <div class="container nav-container"> 
-        <nav class="main-nav navbar navbar-toggleable-md navbar-light bg-faded">
+        <nav class="main-nav navbar navbar-toggleable-sm navbar-light bg-faded">
 
           <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -71,7 +72,7 @@
     <section class="hero-container container-fluid">
 
       <div class="hero-jumbo jumbotron">
-        <h3 class="jumbo-title text-center">Sweet and Juicy, plus Nutritious and Delicious</h3>
+        <h1 class="jumbo-title text-center">Sweet and Juicy, plus Nutritious and Delicious</h1>
         <p class="lead text-center">Orange&trade; is one of the world's most popular fruits for a reason.</p>
         <div class="text-center">
           <button type="button" class="hero-button btn btn-primary mx-auto">Buy Now</button>
@@ -84,6 +85,14 @@
             BENEFITS
   ##########################
 -->
+    <section class="benefits">
+      <div class="container">
+        <h2>There's plenty of reasons to choose <span>Orange&trade;</span></h2>
+
+      </div>
+
+    </section>
+
 
 
 <!--
