started a new section called mailing list

--- a/index.html
+++ b/index.html
@@ -74,9 +74,11 @@
       <div class="hero-jumbo jumbotron">
         <h1 class="jumbo-title text-center">Sweet and Juicy, plus Nutritious and Delicious</h1>
         <p class="lead text-center">Orange&trade; is one of the world's most popular fruits for a reason.</p>
+
         <div class="text-center">
           <button type="button" class="hero-button btn btn-primary mx-auto">Buy Now</button>
         </div>
+
       </div>
     </section>
     
@@ -88,18 +90,69 @@
     <section class="benefits">
       <div class="container">
         <h2>There's plenty of reasons to choose <span>Orange&trade;</span></h2>
+        <div class="card-deck">
 
-      </div>
+          <div class="row card-container">
 
+          <div class="col-lg-4 d-flex">
+            <div class="card text-center">
+              <img class="card-img-top" src="img/laptop.jpg" alt="Card image cap">
+              <div class="card-block">
+                <p class="card-text">Renouned for its concentration of Vitamin C, <span>Orange&trade;</span>
+                makes the perfect snack and adds a special tang to many recipes.</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 d-flex">
+            <div class="card text-center">
+              <img class="card-img-top" src="img/slice-drink.jpg" alt="Card image cap">
+              <div class="card-block">
+                <p class="card-text"><span>Orange&trade;</span> is also a great source of dietary fiber 
+                and B Vitamins such as Vitamin B1, pantothenic acid, and folate.</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 d-flex">
+            <div class="card text-center">
+              <img class="card-img-top" src="img/juice.jpg" alt="Card image cap">
+              <div class="card-block">
+                <p class="card-text">Studies in both animals and humans indicate that regular consumption
+                 of <span>Orange&trade;</span> is associated with various health benefits</p>
+              </div>
+            </div>
+          </div>
+        
+          </div><!--/.row-->
+        </div><!--/.card-deck-->
+      </div><!--/.container -->
     </section>
 
 
 
 <!--
   ##########################
-            OTHER ITEMS BLAAHHHHH
+        MAILING LIST
   ##########################
 -->
+
+    <section class="mailing-list">
+
+      <div class="container py-5">
+        <div class="row">
+          <div class="mail-col text-center col-lg-6">
+            <p>Want to learn more about how <span>Orange&trade;</span> can improve your life?</p>
+            <p>Join our mailing list and grab a <span>free pdf</span> with the juicy details</p>
+            <input class="mb-4 p-2" type="text" placeholder="Your Name">
+            <input class="mb-4 p-2" type="text" placeholder="Your Email Address">
+            <input class="p-2" type="submit" value="Download Now">
+          </div>
+
+        </div>
+      </div>
+
+    </section>
 
 <!--
   ##########################
