--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 
 <!--
   ##########################
-            ANOTHER ITEMS BLAAHHHHH
+        GET STARTED
   ##########################
 -->
 
