--- a/index.html
+++ b/index.html
@@ -159,31 +159,52 @@
   ##########################
 -->
 
-<section class="testimonial">
-  <div class="container">
-    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-      <div class="carousel-inner" role="listbox">
-        <div class="carousel-item active">
-          <img class="d-block img-fluid" src="..." alt="First slide">
-        </div>
-        <div class="carousel-item">
-          <img class="d-block img-fluid" src="..." alt="Second slide">
-        </div>
-        <div class="carousel-item">
-          <img class="d-block img-fluid" src="..." alt="Third slide">
+<section class="testimonial py-5 hidden-md-down">
+
+  <div id="carouselExampleSlidesOnly" class="carousel slide justify-content-center" data-pause="false" data-interval="6000" data-ride="carousel">
+    <div class="carousel-inner mx-auto" role="listbox">
+
+      <div class="carousel-item text-center flex-column active">
+        <h4>Do not modify the z-indexes and opacity first work with the ones I have given above and then start 
+          doing complex stuff, ask again if you have some doubt and sorry for typos I have less time.</h4>
+        <div class="divider mb-5 d-block"><span class="inner-tri"></span></div>
+        <div class="media">
+          <img class="d-flex mr-3" src="http://www.piedpiper.com/app/themes/pied-piper/dist/images/richard.png" alt="Richard Hendricks Picture">
+          <div class="media-body">
+            <h5 class="mt-0">Richard Hendricks</h5>
+            Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+          </div>
         </div>
       </div>
-      <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
+
+      <div class="carousel-item text-center flex-column">
+        <h4>Do not modify the z-indexes and opacity first work with the ones I have given above and then start 
+          doing complex stuff, ask again if you have some doubt and sorry for typos I have less time.</h4>
+        <div class="divider mb-5 d-block"><span class="inner-tri"></span></div>
+        <div class="media">
+          <img class="d-flex mr-3" src="http://www.piedpiper.com/app/themes/pied-piper/dist/images/dinesh.png" alt="Dinesh Chugtai Picture">
+          <div class="media-body">
+            <h5 class="mt-0">Dinesh Chugtai</h5>
+            Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+          </div>
+        </div>
+        </div>
+
+      <div class="carousel-item text-center flex-column">
+        <h4>Do not modify the z-indexes and opacity first work with the ones I have given above and then start 
+          doing complex stuff, ask again if you have some doubt and sorry for typos I have less time.</h4>
+        <div class="divider mb-5 d-block"><span class="inner-tri"></span></div>
+        <div class="media">
+          <img class="d-flex mr-3" src="http://www.piedpiper.com/app/themes/pied-piper/dist/images/erlich.png" alt="Erlich Bachman Picture">
+          <div class="media-body">
+            <h5 class="mt-0">Erlich Bachman</h5>
+            Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+          </div>
+        </div>
+      </div>
+
     </div>
   </div>
-
 
 </section>
 
