working on footer now

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css?family=Yellowtail" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Dosis" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="styles/styles.css">
+    <script src="https://use.fontawesome.com/2692d542cb.js"></script>
     
   </head>
   <body>
@@ -20,9 +21,6 @@
 
       Design credit goes to tjbear.  This is not my design, but his.  Practice purposes only
     -->
-
-
-
 
     <!--
   ##########################
@@ -161,7 +159,7 @@
 
 <section class="testimonial py-5 hidden-md-down">
 
-  <div id="carouselExampleSlidesOnly" class="carousel slide justify-content-center" data-pause="false" data-interval="6000" data-ride="carousel">
+  <div id="carouselExampleSlidesOnly" class="carousel slide justify-content-center py-5" data-pause="false" data-interval="6000" data-ride="carousel">
     <div class="carousel-inner mx-auto" role="listbox">
 
       <div class="carousel-item text-center flex-column active">
@@ -207,6 +205,65 @@
   </div>
 
 </section>
+
+<!--
+  ##########################
+        GET STARTED
+  ##########################
+-->
+
+<section class="get-started container-fluid py-5">
+
+  <div class="overlay container py-5">
+    <h2 class="display-3 mb-4">Ready for Orange to change your life?</h2>
+    <p class="mb-3">Join the thousands of happy and healthy users of Orange today!</p>
+    <button type="button" class="btn btn-success get-start-btn px-4 py-3">Get Started</button>
+  </div>
+
+</section>
+
+<!--
+  ##########################
+        FOOTER
+  ##########################
+-->
+
+<footer class="main-footer py-5">
+  <div class="container">
+    <div class="row justify-content-between">
+      <div class="col-12 col-lg-4">
+        <ul>
+          <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+          <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+          <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+        </ul>
+        <p>Made with <span></span> and Oranges.</p>
+        <p>Copyright &copy; 2016 Orange&trade.  All Rights Reserved.</p>
+      </div>
+
+      <div class="col-12 col-lg-3">
+        <ul class="nav flex-column">
+          <li class="nav-item p-2">
+            <a class="nav-link d-inline p-2" href="#">Blog</a>
+          </li>
+          <li class="nav-item p-2">
+            <a class="nav-link d-inline p-2" href="#">Resources</a>
+          </li>
+          <li class="nav-item p-2">
+            <a class="nav-link d-inline p-2" href="#">Team</a>
+          </li>
+          <li class="nav-item p-2">
+            <a class="nav-link d-inline p-2" href="#">Careers</a>
+          </li>
+          <li class="nav-item p-2">
+            <a class="nav-link d-inline p-2" href="#">Contact</a>
+          </li>
+          
+        </ul>
+      </div>
+    </div>
+  </div>
+</footer>
 
  
 
