--- a/index.html
+++ b/index.html
@@ -231,32 +231,32 @@
 <footer class="main-footer py-5">
   <div class="container">
     <div class="row justify-content-between">
-      <div class="col-12 col-lg-4">
-        <ul>
-          <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-          <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-          <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+      <div class="media-nav-contain col-12 col-lg-4">
+        <ul class="media-nav pl-0">
+          <li class="media-list-item mr-2"><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+          <li class="media-list-item mr-2"><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+          <li class="media-list-item"><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
         </ul>
         <p>Made with <span></span> and Oranges.</p>
         <p>Copyright &copy; 2016 Orange&trade.  All Rights Reserved.</p>
       </div>
 
       <div class="col-12 col-lg-3">
-        <ul class="nav flex-column">
-          <li class="nav-item p-2">
-            <a class="nav-link d-inline p-2" href="#">Blog</a>
+        <ul class="nav flex-column px-0">
+          <li class="nav-item mb-2 mx-0">
+            <a class="nav-link d-inline p-0" href="#">Blog</a>
           </li>
-          <li class="nav-item p-2">
-            <a class="nav-link d-inline p-2" href="#">Resources</a>
+          <li class="nav-item mb-2 mx-0">
+            <a class="nav-link d-inline p-0" href="#">Resources</a>
           </li>
-          <li class="nav-item p-2">
-            <a class="nav-link d-inline p-2" href="#">Team</a>
+          <li class="nav-item mb-2 mx-0">
+            <a class="nav-link d-inline p-0" href="#">Team</a>
           </li>
-          <li class="nav-item p-2">
-            <a class="nav-link d-inline p-2" href="#">Careers</a>
+          <li class="nav-item mb-2 mx-0">
+            <a class="nav-link d-inline p-0" href="#">Careers</a>
           </li>
-          <li class="nav-item p-2">
-            <a class="nav-link d-inline p-2" href="#">Contact</a>
+          <li class="nav-item mb-2 mx-0">
+            <a class="nav-link d-inline p-0" href="#">Contact</a>
           </li>
           
         </ul>
